seperate server and client

--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "ng build -prod -aot && gulp",
     "start": "ng serve",
-    "start:https": "ng serve --ssl true --ssl-key ./dev_cert.key --ssl-cert ./dev_cert.crt",
+    "start:https": "ng serve --ssl true --ssl-key ./dev_cert.key --ssl-cert dev_cert.crt",
     "test": "ng test --watch false",
     "e2e": "ng e2e"
   },
