--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     "intl": "^1.2.5",
     "node-sass": "^4.5.2",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "enhanced-resolve": "3.3.0"
   },
   "devDependencies": {
     "@angular/cli": "1.0.2",
