--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "body-parser": "~1.17.2",
     "mysql": "^2.18.1"
   },
   "devDependencies": {}
